tests/baselines/reference/ambientClassOverloadForFunction.errors.txt
tests/cases/compiler/ambientClassOverloadForFunction.ts(2,10): error TS2300: Duplicate identifier 'foo'.


==== tests/cases/compiler/ambientClassOverloadForFunction.ts (1 errors) ====
    declare class foo{};
    function foo() { return null; }
             ~~~
!!! error TS2300: Duplicate identifier 'foo'.
    